syntax = "proto3";

package v1;

option go_package = "./v1";
option java_multiple_files = true;
option java_outer_classname = "Meta";
option java_package = "com.apfs.protocol.v1";

message ObjectStatus {
  string              status      = 1;
  string              message     = 2;
}

// ItemMeta information
message ItemMeta {
  string              name            = 1;
  string              name_ext        = 2;
  string              type            = 3;
  string              content_type    = 4;
  string              hash_id         = 5;
  int32               width           = 6;
  int32               height          = 7;
  uint64              size            = 8;
  int64               duration        = 9;
  string              bitrate         = 10;
  string              codec           = 11;
  string              ext_json        = 12;
  ObjectStatus        status          = 13;
  int64               updated_at      = 14;
}

// Meta information of the file object
message Meta {
  string              manifest_version  = 1;
  ItemMeta            main              = 2;
  repeated ItemMeta   items             = 3;
  repeated string     tags              = 4;
  int64               created_at        = 5;
  int64               updated_at        = 6;
}
